# sms-tools

./: README.md  check_rom.py  fix_checksum.py  get_assets.py  get_tiles.py  pylintrc  pyproject.toml  sms_rom_reader.py
sms/: checksum.py  constants.py  size.py
smstools/: check-rom.py  check_rom.py  dump-headers.py  dump_headers.py  fix-checksum.py  fix_checksum.py
smstools/core/: checksum.py  code_masters_header.py  header.py  rom_header.py  sdsc_header.py  size.py
