[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "sms-tools"
version = "0.1.0"
requires-python = ">=3.7"
dependencies = [
    "colorama",
]
authors = [{ name = "André L. C. Moreira", email = "andrelcmoreira@proton.me" }]
description = "A collection of tools for working with SMS roms."
license = "LGPL-3.0-only"
license-files = ["LICEN[CS]E.*"]
readme = { file = "README.md", content-type = "text/markdown" }

[project.optional-dependencies]
dev = [
    "pylint"
]

[project.urls]
Repository = "https://github.com/andrelcmoreira/sms-tools.git"
